haptic_wall.c currently acts like one way door. need to make bounds work

--- a/haptic/SConstruct
+++ b/haptic/SConstruct
@@ -94,16 +94,16 @@ env.Program('control', ['control.c',
            )
 
 
-env.Program('how_to_usb', ['how_to_usb.c',
-                         '../lib/common.c',
-                         '../lib/usb.c',
-                         'usb_descriptors.c',
-                         '../lib/timer.c',
-                         '../lib/ui.c',
-                         '../lib/pin.c',
-                         '../lib/uart.c',
-                        ]
-           )
+# env.Program('how_to_usb', ['how_to_usb.c',
+#                          '../lib/common.c',
+#                          '../lib/usb.c',
+#                          'usb_descriptors.c',
+#                          '../lib/timer.c',
+#                          '../lib/ui.c',
+#                          '../lib/pin.c',
+#                          '../lib/uart.c',
+#                         ]
+#            )
 
 
 env.Hex('haptic')
@@ -114,5 +114,5 @@ env.Hex('haptic_wall')
 env.List('haptic')
 env.Hex('control')
 env.List('control')
-env.Hex('how_to_usb')
-env.List('how_to_usb')
+# env.Hex('how_to_usb')
+# env.List('how_to_usb')
